--- a/config.toml
+++ b/config.toml
@@ -29,14 +29,20 @@ pygmentscodefencesguesssyntax = true
     weight = 1
     url = "https://github.com/sapuglha/"
 [[params.social]]
+    name = "Mastodon"
+	icon = "fa fa-mastodon fa-2x"
+    weight = 2
+    url = "https://androiddev.social/@sapuglha"
+	rel = "me"
+[[params.social]]
     name = "Twitter"
 	icon = "fa fa-twitter fa-2x"
-    weight = 2
+    weight = 3
     url = "https://twitter.com/sapuglha/"
 [[params.social]]
     name = "LinkedIn"
 	icon = "fa fa-linkedin fa-2x"
-    weight = 3
+    weight = 4
     url = "https://www.linkedin.com/in/TiagoSantannaSilva/"
 
 [[menu.main]]
