--- a/hugo.toml
+++ b/hugo.toml
@@ -5,23 +5,21 @@ languagecode = "en"
 defaultcontentlanguage = "en"
 
 paginate = 20
-canonifyurls = true
-
-pygmentsstyle = "bw"
-pygmentscodefences = true
-pygmentscodefencesguesssyntax = true
 
 [params]
     author = "Tiago Silva"
+    info = "Tighten droids' nuts and bolts"
     description = "Tighten droids' nuts and bolts"
     keywords = "blog,developer,personal"
-    info = "Tighten droids' nuts and bolts"
 
-    hideCredits = false
-    hideCopyright = false
+	enableTwemoji = true
 
-    # Custom CSS
-	custom_css = []
+	colorScheme = "auto"
+	hidecolorschemetoggle = false
+
+	#customCSS = []
+	#customSCSS = []
+	#customJS = []
 
 [[params.social]]
     name = "Github"
